--- a/discussion.tex
+++ b/discussion.tex
@@ -1,6 +1,22 @@
 \section{Discussion}
-%Here discuss what your results mean. Are your hypotheses supported or not? Do you have an answer to your overall research question?
+\label{sec:discussion}
 
-The data collected provides some evidence that forefoot striking produces a larger force upon pushoff. 
+\subsection{Heel- and toe-strike do not appear to produce different vertical ground reaction forces (GRF) or body accelerations}
 
-The data in other studies show that heel strikes produce a larger more instantaneous impact causing injuries compared to a slower more spread out force with a forefoot strike. 
+One hypothesis I set out to test was that heel-strike would produce larger ground reaction forces (GRFs) or body accelerations. This was not supported by data from the force plate kymograph (\fref{fig:results:forceplate}) or from body center of mass accelerations during running (\fref{fig:results:accel}, which showed little difference between the vertical GRFs and $Y$ component accelerations. As a result, I conclude shin splints are not just caused by grossly higher forces in heel-strike running. In retrospect, it seems reasonable to expect this as the weight of the runner has not changed and the overall stride parameters (stride frequency, period, length, and duty cycle), while posessing some small changes, are not wildly different (\fref{fig:results:stride} and \fref{tab:results:stride}). 
+
+
+
+\subsection{Toe-strike (forefoot strike) may produce larger horizontal GRFs on pushoff?}
+
+The force plate kymograph data suggest that toe- forefoot strike produces a larger horizontal ground reaction force upon pushoff. The improvised instrumentation I used was too crude to observe the magnitude and timing of horizontal ground reaction forces; and an alternative explanation could be that the pavers used in the force plate have nonlinear friction in one direction that resulted in the observed patterns (yellow arrows in \fref{fig:results:forceplate}). However, given that for the same speed, toe-striking used a shorter duty cycle (\fref{fig:results:stride} and \fref{tab:results:stride}) it seems reasonable that, with less contact time with the ground per step, the horizontal ground reaction forces to keep moving forward at the same speed would need to be higher during some part of the cycle.
+
+
+
+\subsection{Kinematic differences between heel- and toe-strike suggest a mechanism for higher loads in the lower leg}
+
+Without a ``smoking gun'' in my force plate and accelerometer readings, I had to take a closer look at kinematic differences between the two running styles. The hip and knee joint angles look similar between the heel- and toe-strike (\fref{fig:results:jointangles}C-F), however, there are clear differences in the foot angles (\fref{fig:results:jointangles}A-B). In heel-strike, the leg impacts the ground with the heel, while the foot is dorsiflexed. During toe-strike, on the other hand, the leg impacts the ground with the toe, and the foot remains plantar flexed for nearly all of stance.
+
+When I look closely at the kinematic tracings of figures~\ref{fig:results:heelpretty} and \ref{fig:results:toepretty}, it appears that during heel-strike as the heel comes in contact with the ground, the lower leg (knee to ankle, containing tibia, fibula, etc) is closely aligned with the line of action of the ground reaction force to the hip (compare line from hip to triangles versus the alignment of the lower leg in \fref{fig:results:heelpretty}). In contrast, during toe-strike as the toe comes in contact with the ground, the lower leg is not aligned with the line of action of the ground reaction force to the hip (line from hip to triangle is not aligned with lower leg in \fref{fig:results:toepretty}). When I compared these angles (\fref{fig:results:contactangles}), the differences between the two treatments were significant. While the gross, overall forces and accelerations may not be different between the two styles, the fine details of forces as experienced by particular parts of the leg could be very different during key instances of the stride; in heel-strike the lower leg must take all of the load as a compressive shock load at the start of every stance phase, while in toe-strike the leg acts more compliant and is able to share the load not just on the lower leg, but also the foot, the upper leg, and the muscles and tendons crossing several joints. 
+
+\textbf{Wrap up here. Cite others and put your work in context...} The data in other studies show that heel strikes produce a larger more instantaneous impact causing injuries compared to a slower more spread out force with a forefoot strike. 
