--- a/results.tex
+++ b/results.tex
@@ -10,7 +10,7 @@
 %c \includegraphics[width=0.29\columnwidth]{figures/results5.png}
 \includegraphics[width=0.75\columnwidth]{figures/fig-results-4.png}
 \end{center}
-\caption{Improvised force plate recordings of vertical ground reaction force; (A) and (B) trials comparing heel-strike (H) and toe-strike (T); (C) checking horizontal GRF toe-strike. Yellow arrows denote steps in which there appears to be either platform motion or a large horizontal GRF.}
+\caption{Improvised force plate recordings of vertical ground reaction force; (A) and (B) trials comparing heel-strike (H) and toe-strike (T); (C) checking horizontal GRF toe-strike. Yellow arrows denote steps in which there appears to be either platform motion or a large horizontal GRF as evidenced by visible white within the center of the trace.}
 \label{fig:results:forceplate}
 \end{figure}
 
@@ -19,7 +19,7 @@
 
 
 \subsection{Measurements of acceleration using a smartphone}
-\SI{10}{\second} recordings of the vertical ($Y$) acceleration during running with heel- and toe-strike are shown in~\fref{fig:results:accel}. Toe-strike appears to provide slightly higher peaks accelerations, but is not statistically different from heel-strike (ANOVA, $p=0.551$, $n=1998$). Vertical accelerations (mean$\pm$s.d.) are \SI{9.5\pm8.8} for heel-strike and \SI{9.3\pm10} for toe-strike. 
+\SI{10}{\second} recordings of the vertical ($Y$) acceleration during running with heel- and toe-strike are shown in~\fref{fig:results:accel}. Toe-strike appears to provide slightly higher peaks accelerations, but is not statistically different from heel-strike (ANOVA, $p=0.551$, $n=1998$). Vertical accelerations (mean$\pm$s.d.) are \SI{9.5\pm8.8}{\meter\per\second\squared} for heel-strike and \SI{9.3\pm10}{\meter\per\second\squared} for toe-strike. 
 \begin{figure}[h]
 \begin{center}
 %\includegraphics{data/accel/accelerations-raw.pdf}
@@ -47,7 +47,7 @@ Figures~\ref{fig:results:heelpretty} and \ref{fig:results:toepretty} show the di
 \begin{center}
 \includegraphics{data/toe-pretty.pdf}
 \end{center}
-\caption{Digitized kinematics from toe-strike running on a treadmill at \SI{8}{mph} (\SI{3.6}{\meter\per\second}). Toe strike position indicated with triangles. Stance phase for this leg indicated in red. Numbers indicate video frame. Diretions reversed from video. After \citep{marey1873locomotion, muybridge1901human}.}  
+\caption{Digitized kinematics from toe-strike running on a treadmill at \SI{8}{mph} (\SI{3.6}{\meter\per\second}). Toe strike position indicated with triangles. Stance phase for this leg indicated in red. Numbers indicate video frame. Directions reversed from video. After \citep{marey1873locomotion, muybridge1901human}.}  
 \label{fig:results:toepretty}
 \end{figure}
 
