--- a/trombetta.tex
+++ b/trombetta.tex
@@ -5,7 +5,7 @@
 \date{\today}
 
 
-\usepackage[separate-uncertainty=true]{siunitx}
+\usepackage[separate-uncertainty=true,multi-part-units=single]{siunitx}
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\inch}{in}
 \DeclareSIUnit{\foot}{ft}
