Sketching out refs for discussion and intro

--- a/intro.tex
+++ b/intro.tex
@@ -1,10 +1,41 @@
 \section{Introduction}
 % Trombetta: Most of what I have is not running shin splints stuff; hopeful you found some there. I do have some general human running stuff in the list. You might ask 1/C Anmol Walha about running biomechanics, and 1/C Lily Bautista about walking and ankles? I have their 485 projects but not the references they found... 
+%Work from an inverted triangle (broader topics to more specific). Explain what you are interested, review some relevant literature, and then set up what your specific research question is. Cite literature using the author-year format, as in \citep{buck2020go}. If you need pictures to explain the relevant biomechanics, feel free to include. This section should also say a little why your research matters. The last part of this section should be the specific hypotheses you seek to test. 
+
+%What is shin splint? 
+
+\citet{slocum1967shin} medically described shin splints as a symptom complex characterized by pain and discomfort in the lower leg after repetitive overuse in walking or running. The usual sites of pain are the lower half of the posteromedial border of the tibia, the anterior tibial compartment, the tibia, and the interosseous membrane; other additional technical details are provided to distinguish it from stress fractures, anterior tibial syndrome, and muscle hernia \citep{slocum1967shin}.
+
+%General biomechanics reviewed in \citep{chan1994foot, lieberman2020biomechanical, bramble2004endurance, lieberman2010foot}.
+Pop review in \citep{douglas2012midfoot}; cites \citep{gandolini2012impact}
 
 To study the effectiveness and injury risk of heel strike versus forefoot strike running.
 
 Explain heel strike versus forefoot strike
 
-Work from an inverted triangle (broader topics to more specific). Explain what you are interested, review some relevant literature, and then set up what your specific research question is. Cite literature using the author-year format, as in \citep{buck2020go}. If you need pictures to explain the relevant biomechanics, feel free to include. This section should also say a little why your research matters. 
+\citet{larson2014comparison} examined barefoot and minimally shod runners in a recreational road race and found only 20.7\% of barefoot runners were rearfoot (heel) strikers. 
 
-The last part of this section should be the specific hypotheses you seek to test. 
+\citet{gans1985relationship} studied ballet dancers and found that dancers with a history of shin splints demonstrated more double heel strikes when executing a sequence of jumps. 
+
+\citet{diebal2012forefoot} found a 6-week forefoot strike running intervention reduced pain and disability associated with chronic exertional compartment syndrome. 
+
+\citet{willems2004intrinsic} conducted a study with 400 physical education students and found subjects that developed exercise-related lower leg pain had an altered running pattern compared to the controls including a more central heel strike. 
+
+On the other hand, \citet{cibulka1994shin} presented a case study of a patient with shin splints who ran using a forefoot contact running style, whose symptoms were resolved when shifting to a heel-toe style. \citet{warr2015characterization} characterized foot-strike patterns in 341 soldiers and found no difference between injury rates or performance on a two-mile run between heel-strike and nonheel-strike. 
+
+\citep{thacker2002prevention} Results: The use of shock-absorbent insoles,
+foam heel pads, heel cord stretching, alternative footwear, as well as graduated running programs among military recruits have
+undergone assessment in controlled trials. There is no strong support for any of these interventions, and each of the four controlled trials
+is limited methodologically. Median quality scores in these four studies ranged from 29 to 47, and serious flaws in study design, control
+of bias, and statistical methods were identified. Conclusion: Our review yielded little objective evidence to support widespread use
+of any existing interventions to prevent shin splints. The most encouraging evidence for effective prevention of shin splints involves
+the use of shock-absorbing insoles. However, serious flaws in study design and implementation constrain the work in this field thus
+far. A rigorously implemented research program is critically needed to address this common sports medicine problem.
+
+Explain instrumentation 
+%\citep{baker2007history, mcmahon1984muscles, mayer2010physiological, marey1873locomotion, carlet1872essai, muybridge1901human}
+
+%\citep{bell1984quantifying, denny1983simple}
+
+
+
