--- a/discussion.tex
+++ b/discussion.tex
@@ -20,3 +20,24 @@ Without a ``smoking gun'' in my force plate and accelerometer readings, I had to
 When I look closely at the kinematic tracings of figures~\ref{fig:results:heelpretty} and \ref{fig:results:toepretty}, it appears that during heel-strike as the heel comes in contact with the ground, the lower leg (knee to ankle, containing tibia, fibula, etc) is closely aligned with the line of action of the ground reaction force to the hip (compare line from hip to triangles versus the alignment of the lower leg in \fref{fig:results:heelpretty}). In contrast, during toe-strike as the toe comes in contact with the ground, the lower leg is not aligned with the line of action of the ground reaction force to the hip (line from hip to triangle is not aligned with lower leg in \fref{fig:results:toepretty}). When I compared these angles (\fref{fig:results:contactangles}), the differences between the two treatments were significant. While the gross, overall forces and accelerations may not be different between the two styles, the fine details of forces as experienced by particular parts of the leg could be very different during key instances of the stride; in heel-strike the lower leg must take all of the load as a compressive shock load at the start of every stance phase, while in toe-strike the leg acts more compliant and is able to share the load not just on the lower leg, but also the foot, the upper leg, and the muscles and tendons crossing several joints. 
 
 \textbf{Wrap up here. Cite others and put your work in context...} The data in other studies show that heel strikes produce a larger more instantaneous impact causing injuries compared to a slower more spread out force with a forefoot strike. 
+
+\citet{dickinson1985measurement} demonstrated a shock wave propagates through the skeletal system following heel strike and suggests it was not seen in previous measurements because of adequate shock absorption provided by running shoes, but became readily apparent in barefoot runners. 
+
+\citet{knorz2017three} combined left and right force plate measurements and 3D kinematics to resolve the detailed ground reaction forces and to map them to stress patterns in the ankle, knee, and hip joint, concluding that forefoot and rearfoot strike were associated with different 3D stress patterns with no global advantage of one strike pattern over the other. Rearfoot strike had peak during initial contact as seen in the (HARVARD DATA) but had a lower maximum peak force during stance.
+
+\citet{viitasalo1983some} found runners with shin splints had greater angular displacements and experienced greater Achilles tendon angles during shin splints, as well as greater angular displacement between heel strike and the maximal everted position. 
+
+\citet{giandolini2013impact} found a combination of compliant shoes, increased stride frequency, and shifting to a forefoot strike were effective in attenuating the foot-ground impact. They also found that forefoot strike was associated with pre-activation of the gastrocnemius lateralis, preparing it to act as a spring or shock absorber during contact. 
+
+\citet{mizrahi2000effect} found that kinematic changes in long distance runners during fatigue included lower stride frequency, joint angle differences, increased hip vertical excursion, and higher accelerations of the shank, which they interpreted as conssitent with higher impact accelerations and increasd risk of overload injuries. 
+
+The joint angles I observed were similar to those in high speed walking \citep{liu2008muscle}. 
+
+Impact peak seen in \citep{chan1994foot, boyer2015rearfoot}.
+
+\citet{boyer2015rearfoot} concluded that not all lower extremity loading variables are lower with a forefoot strike or when running barefoot; switching to a forefoot strike may not alleviate certain pain or help runners avoid injury. A more viable option may be to shorten one’s stride length 10\% \citep{boyer2015rearfoot}.
+
+Adoption of a more compliant gait might be expected to reduce mechanical forces transmitted through the skeleton but incurs a higher metabolic cost \citep{mcmahon1987groucho}. 
+
+
+
