--- a/methods.tex
+++ b/methods.tex
@@ -12,7 +12,7 @@ I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\f
 
 \subsection{Improvised force plate kymograph}
 % In this section or in intro add citations to bell1984quantifying, denny1983simple, baker2007history, mayer2010physiological, marey1873locomotion, marey1885method, muybridge1925animals, muybridge1955human, carlet1872essai...  
-To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the side. A paper target was provided so that the subject would consistently step on the force plate. 
+To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (Expo; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the side. A paper target was provided so that the subject would consistently step on the force plate. 
 \begin{figure}
 \begin{center}
 \includegraphics{figures/fig-methods-1.png}
@@ -33,7 +33,7 @@ An initial test of the rig failed due to the grooves in the bead board being loa
 
 
 \subsection{Measurement of accelerations using a smart phone}
-In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using a smartphone (iPhone 5s; Apple; Cupertino, CA), centered \SI{10}{\centi\meter} below the navel and held in place with the right hand. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log $X$, $Y$, and $Z$ acceleration at a sampling rate of \SI{100}{\hertz}.  Running was conducted moving straight and level on an empty street about two blocks in length. I recorded \SI{45}{\second} samples of steady running using each running style, at a cadence of approximately \SI{150}{steps\per\minute}, timed using the Avril Lavigne song ``Sk8er Boi''. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. Analysis of the vertical ($Y$) acceleration measurements was carried out in \Matlab\ (Mathworks; Natick, MA) and R \citep{r2020}, including the \lstinline{tidyverse} and \lstinline{ggplot2} libraries \citep{wickham2019tidyverse}. 
+In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using a smartphone (iPhone 5s; Apple; Cupertino, CA), centered \SI{10}{\centi\meter} below the navel and held in place with the right hand. The method is similar to \citet{shiang2016determine}, who used a multiaxis IMU worn in the shoe; however, that equipment was not available to me. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log $X$, $Y$, and $Z$ acceleration at a sampling rate of \SI{100}{\hertz}.  Running was conducted moving straight and level on an empty street about two blocks in length. I recorded \SI{45}{\second} samples of steady running using each running style, at a cadence of approximately \SI{150}{steps\per\minute}, timed using the Avril Lavigne song ``Sk8er Boi''. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. Analysis of the vertical ($Y$) acceleration measurements was carried out in \Matlab\ (Mathworks; Natick, MA) and R \citep{r2020}, including the \lstinline{tidyverse} and \lstinline{ggplot2} libraries \citep{wickham2019tidyverse}. 
 
 
 
@@ -50,9 +50,9 @@ To examine changes in kinematics and gait during the different running styles, I
 
 Kinematic analysis proceeded using \citet{hedrick2008software} \lstinline{DLTdv8} (\url{http://biomech.web.unc.edu/dltdv/}) to manually digitize six points (\fref{fig:methods:kinematics}) in each frame of video: (1) left toe at the front of the white sole; (2) left heel at the back of the white sole; (3) left ankle at the lateral malleolus as judged by white ankle socks worn by the subject; (4) left knee as judged by the bump from the lateral condyles of the femur and tibia; (5) left hip as judged from a faint stripe marking on the subject's athletic shorts. In addition, a sixth point, the right toe, was also digitized in order to confirm that the left-right phase was \ang{90}. 
 
-Specially written code in \Matlab\ was used to convert the digitized point locations into the joint angles depicted in \fref{fig:methods:kinematics}. Foot angle ($\alpha$) was defined with \ang{0} as anatomically neutral position, positive $\alpha$ as dorsiflexion, and negative $\alpha$ as plantar flexion. The knee angle ($\beta$) was defined with \ang{0} as anatomically neutral position, and positive $\beta$ as knee flexion. Hip angle ($\gamma$) was defined with \ang{0} as anatomically neutral position, positive $\gamma$ as flexion, and negative $\gamma$ as extension. 
+Specially written code in \Matlab\ was used to convert the digitized point locations into the joint angles depicted in \fref{fig:methods:kinematics}. The joint angle definitions followed those used in previous human locomotion studies \citep{qiao2016leg, giandolini2013impact, larson2014comparison, hamner2010muscle, liu2008muscle, dickinson1985measurement, mcmahon1984muscles}. Foot angle ($\alpha$) was defined with \ang{0} as anatomically neutral position, positive $\alpha$ as dorsiflexion, and negative $\alpha$ as plantar flexion. The knee angle ($\beta$) was defined with \ang{0} as anatomically neutral position, and positive $\beta$ as knee flexion. Hip angle ($\gamma$) was defined with \ang{0} as anatomically neutral position, positive $\gamma$ as flexion, and negative $\gamma$ as extension. 
 
-In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the 17 and 21 steps in the heel-strike and toe-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
+In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$ \citep{revzen2009towards}, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the 17 and 21 steps in the heel-strike and toe-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
 % can we get how much of variance covered in PC1,2 components? 
 
 To allow for comparison of stride frequency, stride period, and duty cycle, the videos were reviewed frame by frame in \lstinline{DLTdv8} to identify (1) the start of stance phase based on toe or heel contact; (2) end of stance phase judged by toe liftoff; and (3) toe contact (for heel-strike trials) to aid in length and speed calibration.  For heel-strike analysis, start of stance was judged by heel-strike and rapid foot plantar flexion in contact with the ground; for toe-strike analysis, start of stance was judged by observing when the toe struck the ground during plantar flexion. The angle from the point of contact (heel or toe) to the hip, and the angle of the ankle were also computed as part of this analysis. Additional plotting and statistical analyses were completed in \Matlab\ and R \citep{r2020}. 
