Discussion and intro and abstract

--- a/results.tex
+++ b/results.tex
@@ -1,6 +1,8 @@
 \section{Results}
 \label{sec:results}
 
+Data and source code for analyses and plots are available in a Github repository at: \url{https://github.com/ew282d-evangelista/ew282d-sp2020-0451-trombetta}.
+
 \subsection{Improvised force plate kymograph}
 \Fref{fig:results:forceplate}A-B gives the force plate kymograph traces for two heel- versus toe-strike trials. Maximum vertical GRFs appear approximately equal in magnitude among the two treatments.  Some traces appear to show lateral movement of the force plate (yellow arrows); these appear to happen only in toe-strike trials, including an additional toe-strike trial to check for this effect (\fref{fig:results:forceplate}C). \Fref{fig:results:forceplate}C appears to show the lateral motion only occurs with the left foot. 
 \begin{figure}
@@ -87,7 +89,7 @@ Joint angle data for the foot, knee, and hip under heel-strike and toe-strike ar
 \includegraphics[width=0.49\columnwidth]{data/heel-hip-angle.pdf}
 \includegraphics[width=0.49\columnwidth]{data/toe-hip-angle.pdf}
 \end{center}
-\caption{Joint angles for heel-strike and toe-strike running on a treadmill at \SI{8}{mph} (\SI{3.6}{\meter\per\second}). (A,B) Foot angle; (C,D) knee angle; (E,F) hip angle. Knee and hip angles appear similar between the two running styles, but foot angle shows clear differences immediately before and after foot contact with the ground. In heel-strike, the heel strikes with the foot dorsiflexed; while in toe-strike, the toe strikes the ground while the foot is plantar flexed, allowing it to act as a shock absorber.}
+\caption{Joint angles for heel-strike and toe-strike running on a treadmill at \SI{8}{mph} (\SI{3.6}{\meter\per\second}). (A,B) Foot angle ($\alpha$); (C,D) knee angle ($\beta$); (E,F) hip angle ($\gamma$). Knee and hip angles appear similar between the two running styles, but foot angle shows clear differences immediately before and after foot contact with the ground. In heel-strike, the heel strikes with the foot dorsiflexed; while in toe-strike, the toe strikes the ground while the foot is plantar flexed, allowing it to act as a shock absorber.}
 \label{fig:results:jointangles}
 \end{figure}
 
