--- a/trombetta.bib
+++ b/trombetta.bib
@@ -8,7 +8,9 @@ pages={1845--2022}}
 
 @misc{lieberman2020biomechanical,
 author={Lieberman, Dan},
-howpublished={\url{http://barefootrunning.fas.harvard.edu/4BiomechanicsofFootStrike.html}},
+year={2020},
+howpublished={website},
+url={{http://barefootrunning.fas.harvard.edu/4BiomechanicsofFootStrike.html}},
 note={date accessed 29 Apr 2020}}
 
 @article{bramble2004endurance,
@@ -326,7 +328,7 @@ author={Douglas, Scott},
 year={2012},
 title={Study: midfoot strike might help shin injury},
 journal={Runner's World},
-url={\url{www.runnersworld.com/health-injuries/a20803765/study-midfoot-strike-might-help-shin-injury/}}}
+url={{https://www.runnersworld.com/health-injuries/a20803765/study-midfoot-strike-might-help-shin-injury/}}}
 
 @article{thacker2002prevention,
 author={Thacker, Stephen B and Gilchrist, Julie and Stroup, Donna F and Kimsey, C Dexter},
